- Fixed mobile parent website selection issue - Fixed layout issue in textinput

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,13 @@
 }
 
 .chat-bot-chat {
+  display: none;
   position: fixed;
   bottom: 20px;
   right: 80px;
   height: 600px;
   width: 340px;
   background-color: rgb(255, 255, 255);
-  display: block;
   box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.28) 0px 4px 8px;
   border-radius: 15px;
 }
